# wander-bot

./: .env.example  .gitignore  .pre-commit-config.yaml  BUILD_PLAN.md  DESIGN.md  Dockerfile  Dockerfile.mcp  README.md  docker-compose.yml  pyproject.toml
.github/workflows/: ci.yml  deploy.yml
data/kb/: italy.md  japan.md
deploy/bedrock/: create-guardrail.sh
deploy/helm/wanderbot/: Chart.yaml  values-prod.yaml  values-staging.yaml  values.yaml
deploy/lightsail/: .env.example  Caddyfile  OPERATIONS.md  README.md  docker-compose.prod.yml
docs/: DEMO.md  PROJECT_CONTEXT.md  agent-flow.mermaid
docs/adr/: 0001-supervisor-vs-swarm.md  0002-mcp-separate-process.md  0003-memory-layering.md  0004-amadeus-anchor.md  0005-bedrock-guardrails.md  0006-deterministic-orchestration.md
docs/runbooks/: deployment.md  incident.md  rollback.md
infra/: README.md
infra/k8s/: bootstrap.sh  cluster-issuer.yaml  cluster-secret-store.yaml
infra/terraform/: .gitignore  eks.tf  elasticache.tf  github-oidc.tf  outputs.tf  rds.tf  secrets.tf  terraform.tfvars.example  variables.tf  versions.tf  vpc.tf
mcp_server/: ratelimit.py  server.py
scripts/: check_duffel.py  check_stays.py
src/wanderbot/: __init__.py  config.py  domain.py  llm_factory.py
src/wanderbot/agents/: bundle.py  graph.py  nodes.py  react_agent.py  routing.py  schemas.py  state.py  swarm.py
src/wanderbot/api/: auth_routes.py  chat.py  chat_threads.py  deps.py  main.py  plan.py  preferences.py
src/wanderbot/mcp_client/: client.py
src/wanderbot/memory/: checkpointer.py  pgvector_store.py  preferences.py  runtime.py  serde.py  store.py
src/wanderbot/observability/: cost.py  logging.py  metrics.py  otel.py
src/wanderbot/providers/: fx.py  (+6 more)
tests/: conftest.py
tests/agents/: doubles.py  test_graph_flow.py  test_routing.py  test_swarm.py
tests/evals/: test_plan_evals.py
tests/integration/: test_amadeus_token.py  test_api.py  test_auth_plans.py  test_chat_threads.py
tests/live/: test_amadeus_live.py  test_bedrock_live.py
tests/redteam/: test_redteam.py
tests/unit/: test_amadeus_parse.py  test_bedrock_guardrails.py  test_config.py  test_duffel_parse.py  test_llm_factory.py  test_memory.py  test_observability.py  test_polish.py  test_rag.py  test_ratelimit.py  test_security.py  test_tavily_hotels.py
ui/: Dockerfile  README.md  index.html  nginx.conf  package-lock.json  package.json
ui/src/: App.tsx  Auth.tsx  api.ts  styles.css  types.ts
(+31 files in other folders)
