[project]
name = "wanderbot"
version = "0.1.0"
description = "Advanced multi-agent holiday planning system (LangGraph + MCP + real travel APIs)"
readme = "README.md"
requires-python = ">=3.12"
license = { text = "MIT" }
authors = [{ name = "Triveous" }]

dependencies = [
    # --- Agent core ---
    "langgraph>=0.2.60",
    "langchain-core>=0.3.30",
    "langchain-openai>=0.2.14",
    "langchain-google-genai>=2.0.0",
    "langgraph-checkpoint-postgres>=2.0.0",
    "langchain-mcp-adapters>=0.1.0",
    "mcp>=1.2.0",
    # --- API / web ---
    "fastapi>=0.115.0",
    "uvicorn[standard]>=0.32.0",
    "sse-starlette>=2.1.3",
    "pydantic>=2.9.0",
    "pydantic-settings>=2.6.0",
    # --- HTTP / providers ---
    "httpx>=0.27.0",
    "tenacity>=9.0.0",
    # --- Infra ---
    "redis>=5.2.0",
    "sqlalchemy[asyncio]>=2.0.36",
    "aiosqlite>=0.20.0",      # dev app store (SQLite async driver)
    "asyncpg>=0.30.0",        # prod app store (Postgres async driver)
    "psycopg[binary,pool]>=3.2.0",
    "pgvector>=0.3.6",
    # --- Security ---
    "pyjwt>=2.10.0",
    "python-multipart>=0.0.12",
    "boto3>=1.35.0",  # AWS Bedrock Guardrails (ApplyGuardrail)
    # --- Observability ---
    "structlog>=24.4.0",
    "opentelemetry-sdk>=1.28.0",
    "opentelemetry-exporter-otlp>=1.28.0",
    "prometheus-client>=0.21.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.3.0",
    "pytest-asyncio>=0.24.0",
    "respx>=0.21.1",
    "vcrpy>=6.0.1",
    "ruff>=0.8.0",
    "mypy>=1.13.0",
    "pre-commit>=4.0.0",
    "types-redis>=4.6.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/wanderbot"]

[tool.ruff]
line-length = 100
target-version = "py312"
src = ["src", "tests"]

[tool.ruff.lint]
select = ["E", "F", "I", "B", "UP", "ASYNC", "S", "C4", "SIM", "RUF"]
ignore = ["S101"]  # allow asserts in tests

[tool.ruff.lint.per-file-ignores]
"tests/**" = ["S105", "S106"]

[tool.mypy]
python_version = "3.12"
strict = true
plugins = ["pydantic.mypy"]
mypy_path = "src"
namespace_packages = true
explicit_package_bases = true
ignore_missing_imports = true

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
pythonpath = ["src"]
markers = [
    "live: tests that call real vendor sandbox APIs (require credentials)",
]
